--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
 
 <body>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">
-        <img src="images/fontaine-des-mots-logo.png" />
-      </a>
+    <a class="navbar-brand" href="#">
+      <img src="images/fontaine-des-mots-logo.png" />
+    </a>
+    <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-iconn"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse navtabs" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Accueil</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Livres</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#books">Livres</a>
+            <a class="nav-link" href="#about">A propos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -41,26 +41,23 @@
       </div>
     </div>
   </div>
-  <div class="container">
-    <div id="lastbook">
-      <h1>Le dernier livre</h1>
-      <div id="lastbook-content">
-        <img src="" alt="" id="lastbook-img">
-        <div class="lastbook-desc">
+  <div id="active-book">
+    <div class="container">
+      <div class="active-book-content">
+        <img src="" alt="" id="active-book-img">
+        <div class="active-book-desc">
           <h2>Titre du livre</h2>
           <p>Le résumé du livre</p>
           <a href="">Acheter ce livre</a>
         </div>
       </div>
     </div>
-    <div class="about">
-      <h1>A propos</h1>
-      <p>Voici l'auteur</p>
-    </div>
-    <div id="books">
+  </div>
+  <div id="books">
+    <div class="container">
       <h1>Tous les livres</h1>
       <div class="cards">
-        <div class="card-trip">
+        <div class="card-trip active-book">
           <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
           <div class="card-trip-infos">
             <div>
@@ -128,11 +125,19 @@
         </div>
       </div>
     </div>
-    <div id="contact">
+  </div>
+  <div id="about">
+    <div class="container">
+      <h1>A propos</h1>
+      <p>Voici l'auteur</p>
+    </div>
+  </div>
+  <div id="contact">
+    <div class="container">
       <h1>Contact</h1>
       <ul class="social">
-        <li><a href="">FB</a></li>
-        <li><a href="">Email</a></li>
+        <li><a href="https://www.facebook.com/thierry.teuma"><i class="fab fa-facebook-square"></i></a></li>
+        <li><a href="mailto: tcteuma@gmail.com"><i class="far fa-envelope"></i></a></li>
       </ul>
     </div>
   </div>
