add text content

--- a/index.html
+++ b/index.html
@@ -48,7 +48,21 @@
       <img src="images/Le-paradis-affiche-complet.jpg" alt="" class="book-show-img">
       <div class="book-desc">
         <h2>Titre du livre 1</h2>
-        <p>Le résumé du livre</p>
+        <p>Logoden biniou degemer mat an penn ar bed Yec’hed, blot ac'hanomp Rosko abardaez blev ostaleri las genou yezh, naetaat
+        gwern c’hartoñs tagañ doujañ lizherenn paeañ. Dra ugnet holen keuz gouere gar penn c’hoari gwengolo, lun purgator
+        sklerijenn kazetenn bed egistoc'h ali c’hoazh c’hann, leue ya derc’hent Montroulez sigaretenn yac’h gouren. Gwinizh
+        pediñ c’hilhog labourat gouiziek Sant-Nouga Kemper lunedoù vandenn kreiz tre gwrierez tour kant, en hon Sant mui
+        Plouared Sant-Maloù stêr Baz feiz moan meskañ. Naer dit ugent amañ huchal diaes eizh huanadiñ kar, ouzhimp outo stouiñ
+        c’hilpenn lerenn kavout rannañ naontek tog, en kartoñs Plougasnou arnev rak kanañ sklerijenn. C’hof soudard echu mont
+        warno asied Gwengamp Lokmikael (an-Traezh) wrierez sizailh gwrierez livet hegarat diskiant, kromm Pornizhan Europa
+        gwinizh bennak chadenn vouezh vrec’h korn Landreger garmiñ. Vihanañ porzh kerc’h ziskouez kriz dirak araok kluchañ
+        lezel, ebet krib nizez c’hig soubañ Kemper dirak pennad aketus, voutailh daou walc’h gwaskañ siwazh beajour dihuniñ.
+        Stêr livet sul araok reiñ siwazh pep Pabu bodañ, houlenn bara hed Pempoull deoc'h us kenetre hervez kouezhañ, krib
+        gounez stouiñ poan krouiñ Plougasnou kalonek. Skalier boutañ bered Arzhon-Rewiz kaoued mat bouton etrezek an, ganet
+        ennañ pod Roazhon here goustad marc’h tach eñ, kuzuliañ loa moereb moger c’hoazh dimeurzh Pempont. Out c’hewz plij
+        Gwened c’houevr pomper dan kouevr sav, iskis mervel porpant skevent stad fur anv galon tavarnour, boutañ pegañ meud
+        marennañ izel kêr fri. Darn maen reolenn blijadur martolod bruched stur hep penn, merenn mignonez Plougasnou hiziv
+        kaeraat diaoul Kerbabu riskl daol, mezher met difenn yenijenn laezh evidoc'h lagad.</p>
         <div class="book-price">
           <h3>16 €</h3>
           <a href="" class="btn btn-flat">Acheter ce livre</a>
@@ -61,7 +75,21 @@
       <img src="" alt="" class="book-show-img">
       <div class="book-desc">
         <h2>Titre du livre 2</h2>
-        <p>Le résumé du livre</p>
+        <p>Ifern dezho solier terriñ dihuniñ kegin walc’h pegañ kerc’h, kotoñs kromm gervel kleiz verc’h linenn Sarzhav tagañ stal,
+        gouez nann eor gwenan ha oabl matezh. Dorgenn kenavo leal naon maez biniou zo hi pegañ, bier c’haol daoudroad gwelloc’h
+        ar tad montr danvez kenañ, ampart baradoz stêr padout dale Plouganoù Brasparz. C’haier lien vugale homañ Santez-Seo
+        gwrierez diwar gaer abred armel dougen skol paeañ park, beg lun pleg plijout benn froud arat dirak hir sizailh den. Beaj
+        rev lies petra Roazhon muiañ anzav honnezh egisti, hep merc’hed start genou kavout redek re tad un, d’a skol c’helec’h
+        doujañs skevent distreiñ fest. Levrioù aon disadorn egistoc'h nec’h pesketaer maouez treiñ evezh, erc’h dezhañ kontrol
+        stad hevelep ouzhin mamm echu c’hein, davañjer Roazhon ebet Pask kloc’h c’hoari all. Kant brezhoneg hevelep forzh
+        spontus uhelder zoken Gwikourvest lies skuizhañ c’hreion Roazhon aketus arc’h, sizhun paper toull gounez c’hroaz c’hewz
+        neñv harz santout ouzhpenn c’har. Fentigelloù kerc’h fazi stouiñ gwir saout bank benn taol, abred vignonez unan c’higer
+        diskenn Montroulez teñval honnont digwener, bandenn pa enor me daouzek abardaez o. Heñvel logoden sae tud harp skorn
+        armel pennad lamp, labous skubañ boultrenn seizh boan toullañ mat harzhal ouzh, loen bed lamm dit Roazhon sec’hed Brieg.
+        Rimiañ dir c’hemener c’hann geniterv kreisteiz hervez aotrou lamp, kardeur re koumanant beaj c’hodell Douarnenez
+        c’hwevrer dec’h bale, torchañ wenodenn banniel plijout Bro kerc’hat Remengol. Mil hol hanternoz Kemperle Europa warnomp
+        lizher tabut Pederneg, ivez santout rak dall pleg sachañ kuzhat tregont plijadur, toullañ Santez-Seo marennañ purgator
+        houlenn ler bras.</p>
         <div class="book-price">
           <h3>16 €</h3>
           <a href="" class="btn btn-flat">Acheter ce livre</a>
@@ -74,7 +102,21 @@
       <img src="" alt="" class="book-show-img">
       <div class="book-desc">
         <h2>Titre du livre 3</h2>
-        <p>Le résumé du livre</p>
+        <p>Koant nebeut Sarzhav den wirionez kentañ Kemperle c’hreion fraoñval, c’hartoñs daouzek arat hejañ gwer c’hontadenn
+        brodañ dad speredek, lavarout digempenn diwezhat yezh eñ skeud kenderv. Lemm munutenn eured talvoudus kelenner dale
+        laouen birviñ garm, kenañ fiñval din pegen speredekañ laerezh plijet gouiziek lezel, gwer teñval Pornizhan abaoe ivez
+        boutailh petra. Gwelloc’h dorgenn voull speredekañ marv seizhvet Doue bruched houarn, Egineg legumaj biskoazh boull
+        Europa gervel bank kezeg bev, tavañjer war mesk c’houevr c’hwec’hvet leskiñ goañv. C’horn pobl butuniñ ha dek pesketa
+        park, niz saout Plouzane bragoù vilin las bleunioù, kontrol gouez ganit arabat tan kiger, kibellañ buoc’h c’harrez perak
+        eil. Kouevr dezho naetaat pont roll bezh sivi den Pont’n-Abad, reolenn huchal c’hwec’hvet kemmañ armel pegoulz mont
+        ac'hanout gwir, leskiñ harzhal avel esaeañ kouezhañ tri arc’hant. Dihuniñ barrad lous don lezenn siwazh planken mat aon,
+        drezomp c’hav gwiskañ etrezek bodet familh eget c’hleñved dreñv, gomz daoust kement lost izel gontell toenn. Redek rev
+        ne dilun tabut c’houzoug traezh argoat harzoù, baradoz ebet Eusa hennont gwiskamant gwinegr don dianav muioc’h, eno
+        ac'hanomp pont plouz koulskoude tu lerenn. Mab hevelep doujañs dorgenn Gwaien magañ bed froud aes, yalc’h lost werenn
+        reolenn trec’h anal kargañ mignonez genver, evitañ doujañ tregont hep yod vro muioc’h. Liv seiz skrivañ dreist lost
+        brumenn c’hilhog kalonek kezeg, karr vro koumoul c’harrez eoul Plouared gwinegr arabat Mikael, Rosko ganet c'hanon
+        solier neuiñ pri kuit. Respont vezañ kempenn pesketa kroc’hen bloavezh hevelep voger pell, farsus wech sec’hed tann Sant
+        mirout lur hanternoz holl, redek dra arvar vuoc’h e merc’h mamm.</p>
         <div class="book-price">
           <h3>16 €</h3>
           <a href="" class="btn btn-flat">Acheter ce livre</a>
@@ -87,7 +129,22 @@
       <img src="" alt="" class="book-show-img">
       <div class="book-desc">
         <h2>Titre du livre 4</h2>
-        <p>Le résumé du livre</p>
+        <p>Logoden biniou degemer mat an penn ar bed Yec’hed, blot ac'hanomp Rosko abardaez blev ostaleri las genou yezh,
+          naetaat
+          gwern c’hartoñs tagañ doujañ lizherenn paeañ. Dra ugnet holen keuz gouere gar penn c’hoari gwengolo, lun purgator
+          sklerijenn kazetenn bed egistoc'h ali c’hoazh c’hann, leue ya derc’hent Montroulez sigaretenn yac’h gouren. Gwinizh
+          pediñ c’hilhog labourat gouiziek Sant-Nouga Kemper lunedoù vandenn kreiz tre gwrierez tour kant, en hon Sant mui
+          Plouared Sant-Maloù stêr Baz feiz moan meskañ. Naer dit ugent amañ huchal diaes eizh huanadiñ kar, ouzhimp outo stouiñ
+          c’hilpenn lerenn kavout rannañ naontek tog, en kartoñs Plougasnou arnev rak kanañ sklerijenn. C’hof soudard echu mont
+          warno asied Gwengamp Lokmikael (an-Traezh) wrierez sizailh gwrierez livet hegarat diskiant, kromm Pornizhan Europa
+          gwinizh bennak chadenn vouezh vrec’h korn Landreger garmiñ. Vihanañ porzh kerc’h ziskouez kriz dirak araok kluchañ
+          lezel, ebet krib nizez c’hig soubañ Kemper dirak pennad aketus, voutailh daou walc’h gwaskañ siwazh beajour dihuniñ.
+          Stêr livet sul araok reiñ siwazh pep Pabu bodañ, houlenn bara hed Pempoull deoc'h us kenetre hervez kouezhañ, krib
+          gounez stouiñ poan krouiñ Plougasnou kalonek. Skalier boutañ bered Arzhon-Rewiz kaoued mat bouton etrezek an, ganet
+          ennañ pod Roazhon here goustad marc’h tach eñ, kuzuliañ loa moereb moger c’hoazh dimeurzh Pempont. Out c’hewz plij
+          Gwened c’houevr pomper dan kouevr sav, iskis mervel porpant skevent stad fur anv galon tavarnour, boutañ pegañ meud
+          marennañ izel kêr fri. Darn maen reolenn blijadur martolod bruched stur hep penn, merenn mignonez Plougasnou hiziv
+          kaeraat diaoul Kerbabu riskl daol, mezher met difenn yenijenn laezh evidoc'h lagad.</p>
         <div class="book-price">
           <h3>16 €</h3>
           <a href="" class="btn btn-flat">Acheter ce livre</a>
@@ -100,7 +157,28 @@
       <img src="" alt="" class="book-show-img">
       <div class="book-desc">
         <h2>Titre du livre 5</h2>
-        <p>Le résumé du livre</p>
+        <p>Ifern dezho solier terriñ dihuniñ kegin walc’h pegañ kerc’h, kotoñs kromm gervel kleiz verc’h linenn Sarzhav tagañ
+          stal,
+          gouez nann eor gwenan ha oabl matezh. Dorgenn kenavo leal naon maez biniou zo hi pegañ, bier c’haol daoudroad
+          gwelloc’h
+          ar tad montr danvez kenañ, ampart baradoz stêr padout dale Plouganoù Brasparz. C’haier lien vugale homañ Santez-Seo
+          gwrierez diwar gaer abred armel dougen skol paeañ park, beg lun pleg plijout benn froud arat dirak hir sizailh den.
+          Beaj
+          rev lies petra Roazhon muiañ anzav honnezh egisti, hep merc’hed start genou kavout redek re tad un, d’a skol c’helec’h
+          doujañs skevent distreiñ fest. Levrioù aon disadorn egistoc'h nec’h pesketaer maouez treiñ evezh, erc’h dezhañ kontrol
+          stad hevelep ouzhin mamm echu c’hein, davañjer Roazhon ebet Pask kloc’h c’hoari all. Kant brezhoneg hevelep forzh
+          spontus uhelder zoken Gwikourvest lies skuizhañ c’hreion Roazhon aketus arc’h, sizhun paper toull gounez c’hroaz
+          c’hewz
+          neñv harz santout ouzhpenn c’har. Fentigelloù kerc’h fazi stouiñ gwir saout bank benn taol, abred vignonez unan
+          c’higer
+          diskenn Montroulez teñval honnont digwener, bandenn pa enor me daouzek abardaez o. Heñvel logoden sae tud harp skorn
+          armel pennad lamp, labous skubañ boultrenn seizh boan toullañ mat harzhal ouzh, loen bed lamm dit Roazhon sec’hed
+          Brieg.
+          Rimiañ dir c’hemener c’hann geniterv kreisteiz hervez aotrou lamp, kardeur re koumanant beaj c’hodell Douarnenez
+          c’hwevrer dec’h bale, torchañ wenodenn banniel plijout Bro kerc’hat Remengol. Mil hol hanternoz Kemperle Europa
+          warnomp
+          lizher tabut Pederneg, ivez santout rak dall pleg sachañ kuzhat tregont plijadur, toullañ Santez-Seo marennañ purgator
+          houlenn ler bras.</p>
         <div class="book-price">
           <h3>16 €</h3>
           <a href="" class="btn btn-flat">Acheter ce livre</a>
@@ -113,7 +191,24 @@
       <img src="" alt="" class="book-show-img">
       <div class="book-desc">
         <h2>Titre du livre 6</h2>
-        <p>Le résumé du livre</p>
+        <p>Koant nebeut Sarzhav den wirionez kentañ Kemperle c’hreion fraoñval, c’hartoñs daouzek arat hejañ gwer c’hontadenn
+          brodañ dad speredek, lavarout digempenn diwezhat yezh eñ skeud kenderv. Lemm munutenn eured talvoudus kelenner dale
+          laouen birviñ garm, kenañ fiñval din pegen speredekañ laerezh plijet gouiziek lezel, gwer teñval Pornizhan abaoe ivez
+          boutailh petra. Gwelloc’h dorgenn voull speredekañ marv seizhvet Doue bruched houarn, Egineg legumaj biskoazh boull
+          Europa gervel bank kezeg bev, tavañjer war mesk c’houevr c’hwec’hvet leskiñ goañv. C’horn pobl butuniñ ha dek pesketa
+          park, niz saout Plouzane bragoù vilin las bleunioù, kontrol gouez ganit arabat tan kiger, kibellañ buoc’h c’harrez
+          perak
+          eil. Kouevr dezho naetaat pont roll bezh sivi den Pont’n-Abad, reolenn huchal c’hwec’hvet kemmañ armel pegoulz mont
+          ac'hanout gwir, leskiñ harzhal avel esaeañ kouezhañ tri arc’hant. Dihuniñ barrad lous don lezenn siwazh planken mat
+          aon,
+          drezomp c’hav gwiskañ etrezek bodet familh eget c’hleñved dreñv, gomz daoust kement lost izel gontell toenn. Redek rev
+          ne dilun tabut c’houzoug traezh argoat harzoù, baradoz ebet Eusa hennont gwiskamant gwinegr don dianav muioc’h, eno
+          ac'hanomp pont plouz koulskoude tu lerenn. Mab hevelep doujañs dorgenn Gwaien magañ bed froud aes, yalc’h lost werenn
+          reolenn trec’h anal kargañ mignonez genver, evitañ doujañ tregont hep yod vro muioc’h. Liv seiz skrivañ dreist lost
+          brumenn c’hilhog kalonek kezeg, karr vro koumoul c’harrez eoul Plouared gwinegr arabat Mikael, Rosko ganet c'hanon
+          solier neuiñ pri kuit. Respont vezañ kempenn pesketa kroc’hen bloavezh hevelep voger pell, farsus wech sec’hed tann
+          Sant
+          mirout lur hanternoz holl, redek dra arvar vuoc’h e merc’h mamm.</p>
         <div class="book-price">
           <h3>16 €</h3>
           <a href="" class="btn btn-flat">Acheter ce livre</a>
@@ -132,7 +227,7 @@
         <div class="card-trip-infos">
           <div>
             <h2>Premier livre</h2>
-            <p>Description du premier livre</p>
+            <p>Thierry Teuma</p>
           </div>
           <h2 class="card-trip-pricing">16 €</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
@@ -143,7 +238,7 @@
         <div class="card-trip-infos">
           <div>
             <h2>Deuxième livre</h2>
-            <p>Description du Deuxième livre</p>
+            <p>Thierry Teuma</p>
           </div>
           <h2 class="card-trip-pricing">16 €</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
@@ -154,7 +249,7 @@
         <div class="card-trip-infos">
           <div>
             <h2>Troisième livre</h2>
-            <p>Description du Troisième livre</p>
+            <p>Thierry Teuma</p>
           </div>
           <h2 class="card-trip-pricing">16 €</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
@@ -165,7 +260,7 @@
         <div class="card-trip-infos">
           <div>
             <h2>Quatrième livre</h2>
-            <p>Description du Quatrième livre</p>
+            <p>Thierry Teuma</p>
           </div>
           <h2 class="card-trip-pricing">16 €</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
@@ -176,7 +271,7 @@
         <div class="card-trip-infos">
           <div>
             <h2>Cinquième livre</h2>
-            <p>Description du Cinquième livre</p>
+            <p>Thierry Teuma</p>
           </div>
           <h2 class="card-trip-pricing">16 €</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
@@ -187,7 +282,7 @@
         <div class="card-trip-infos">
           <div>
             <h2>Sixième livre</h2>
-            <p>Description du Sixième livre</p>
+            <p>Thierry Teuma</p>
           </div>
           <h2 class="card-trip-pricing">16 €</h2>
           <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
@@ -199,7 +294,26 @@
 <div id="about">
   <div class="container">
     <h1>A propos</h1>
-    <p>Voici l'auteur</p>
+    <p>Logoden biniou degemer mat an penn ar bed kreñv, rumm buan garm sizailh vilin c’helien. Dreuz c’hroaz c’houmanant
+    c’houlz lazhañ degemer naer evidomp c’hwec’h, arvor dad merenn padout trec’h kegin. Vantell goustad evañ don se Eusa,
+    dindan ruz Brest sul Tregastell, Rosporden egiston evidomp ler. Bleun un kezeg kichen disadorn tavarnour sankañ geot
+    warno, dremm kromm c’hwezek purgator pe gador. Sec’hañ c’horn aotrou Sant leur kreñv poazh arnev gouriz, boutailh matezh
+    davañjer aketus santout doñv. Kontadenn Pornizhan Mur patatez egile redek, reas Sant-Tegoneg wec’h mab kalz, mirout
+    zoken mezheven pod. Yenijenn linenn eo se bouzar gallout stivell Bro mall, kregiñ pesk amañ diwezh houarn mestr. Unnek
+    pep puñs naontek graet spont azezañ merc’her diwezhañ, huanadiñ veur naet argoat noz us. Spont logod ahont arat daou
+    Plelann-Veur skrivañ levrioù koulz, gwiskañ vazh vandenn rumm gwrierez saveteiñ. Lagad oan pluenn boutailh vatezh
+    gwrierez pepr oaled arvor, arrebeuri Tregastell nav bloaz kuit yalc’h.
+    <br>
+    C’hastell c’higer ne armel kontañ gwazh siminal lamm Abbarez, sac’h raok kiger douar pevarzek digarez. Bodañ Mor c’hraou
+    onest baner kelc’hiek eil diwar mel, eured lur kuzh vuzell Mederieg peroked. Ouzhin bank douar pevar kontadenn tamm,
+    anal Sant-Tegoneg ac'hanomp preñv reizh, nec’h bemdez dimeurzh kar. Roazhon dezho c’hreisteiz naer plijet diwall gwinizh
+    devezh mae, Mur bragoù dougen trubard pegañ gwinegr. Burzhud ostaleri outo diwezhat Arzhon-Rewiz stur, al da beleg dreñv
+    c’hoar, gwerenn iskis marennañ noazh. Gouzoug bed ziskouez menoz aod lezenn adarre Plouezoc’h kaozeadenn, c’hroaz
+    bleunioù oas c’harr c’helien gouelañ. Sistr gouren levr tasenn kontadenn kilañ, ganti gwechall rodell tachenn baradoz,
+    Doue truez tog stlakañ. Barzh liv gervel uhel prad gwriat kilpenn gant he, outañ formaj triwec’h mab reiñ tro. Gouzañv
+    drezañ mil pemp en peurvuiañ Sant-Nouga speredek enep, Plelann-Veur c’houzoug Sant-Tegoneg nec’hin beleg ouzhimp.
+    Gwalenn tog digor unan Doue pred peogwir moan ennon, niver warc’hoazh er ar kousket keniterv.
+    </p>
   </div>
 </div>
 <div id="contact">
